--- a/.htaccess
+++ b/.htaccess
@@ -3,5 +3,6 @@ RewriteEngine on
 
 RewriteRule mark/(.*)?$ db_access.php [NC]
 RewriteRule locate/(.*)?$ db_access.php [NC]
+RewriteRule delete/(.*)?$ db_access.php [NC]
 
 </IfModule>
